--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
+	implementation 'org.postgresql:postgresql' //Este es el driver que le indica a JDBC cómo conectarse con PostgreSQL
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
