--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	//runtimeOnly 'com.h2database:h2'
 	implementation 'org.postgresql:postgresql' //Este es el driver que le indica a JDBC cómo conectarse con PostgreSQL
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 }
 
 tasks.named('test') {
