Sprint 11, front-end completion details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.data.rest.base-path=/rest
 
 spring.jackson.serialization.INDENT_OUTPUT=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/homebanking
+spring.datasource.url=jdbc:postgresql://ep-icy-sun-02808964.us-east-2.aws.neon.fl0.io:5432/deployHB
 
-spring.datasource.username=homebanking
+spring.datasource.username=fl0user
 
-spring.datasource.password=homebanking
+spring.datasource.password=EbqKLV1hQdx4
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
