--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.data.rest.base-path=/rest
 
 spring.jackson.serialization.INDENT_OUTPUT=true
 
-spring.datasource.url=jdbc:postgresql://ep-icy-sun-02808964.us-east-2.aws.neon.fl0.io:5432/deployHB
+spring.datasource.url=${DB_URL}:${DB_PORT}/${DB_NAME}
 
-spring.datasource.username=fl0user
+spring.datasource.username=${DB_USERNAME}
 
-spring.datasource.password=EbqKLV1hQdx4
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
